Fix map display on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,3 +17,8 @@
 .ae-date {
   font-style: italic;
 }
+
+.container.mw-image {
+  margin: initial;
+  padding: initial;
+}
